@@ -1,6 +1,8 @@
 v3.2.11 (2018-XX-XX)
 --------------------
 
+* UI: fixed a query editor caching and parsing issue
+
 * Fixed internal issue #1683: fixes an UI issue where a collection name gets wrongly cached
   within the documents overview of a collection.
 
